<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="24dp"
    tools:context=".views.navigation.profile.LanguageFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="80dp">

        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:contentDescription="@string/back_button_image"
            android:src="@drawable/ic_arrow_left"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_headline"
            style="@style/Theme.NutriCatch.TextStyle.Headline.Medium.Bold"
            android:text="@string/language_options"
            app:layout_constraintBottom_toBottomOf="@id/btn_back"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/ic_checklist"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginTop="80dp"
            android:importantForAccessibility="no"
            android:src="@drawable/ic_check"
            android:visibility="visible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_headline"
            app:tint="@color/md_theme_light_primary" />

        <TextView
            android:id="@+id/tv_english"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/english"
            app:layout_constraintBottom_toBottomOf="@id/ic_checklist"
            app:layout_constraintStart_toEndOf="@id/ic_checklist"
            app:layout_constraintTop_toTopOf="@id/ic_checklist" />

        <ImageView
            android:id="@+id/ic_checklist_id"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginTop="16dp"
            android:importantForAccessibility="no"
            android:src="@drawable/ic_check"
            android:visibility="invisible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ic_checklist"
            app:tint="@color/md_theme_light_primary"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/tv_indonesian"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/indonesian"
            app:layout_constraintBottom_toBottomOf="@id/ic_checklist_id"
            app:layout_constraintStart_toEndOf="@id/ic_checklist_id"
            app:layout_constraintTop_toTopOf="@id/ic_checklist_id" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>