<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.nutricatch.dev.views.navigation.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_history"
        android:name="com.nutricatch.dev.views.navigation.history.HistoryFragment"
        android:label="@string/title_history"
        tools:layout="@layout/fragment_history" />

    <fragment
        android:id="@+id/navigation_setting"
        android:name="com.nutricatch.dev.views.navigation.profile.ProfileFragment"
        android:label="@string/title_setting"
        tools:layout="@layout/fragment_profile" >
        <action
            android:id="@+id/action_navigation_setting_to_bodyDetailFragment"
            app:destination="@id/bodyDetailFragment" />
        <action
            android:id="@+id/action_navigation_setting_to_languageFragment"
            app:destination="@id/languageFragment" />
        <action
            android:id="@+id/action_navigation_setting_to_privacyFragment"
            app:destination="@id/privacyFragment" />
    </fragment>

    <activity
        android:id="@+id/cameraActivity"
        android:name="com.nutricatch.dev.views.navigation.camera.CameraActivity"
        android:label="activity_camera"
        tools:layout="@layout/activity_camera" />
    <fragment
        android:id="@+id/bodyDetailFragment"
        android:name="com.nutricatch.dev.views.navigation.profile.BodyDetailFragment"
        android:label="fragment_body_detail"
        tools:layout="@layout/fragment_body_detail" />
    <fragment
        android:id="@+id/languageFragment"
        android:name="com.nutricatch.dev.views.navigation.profile.LanguageFragment"
        android:label="fragment_language"
        tools:layout="@layout/fragment_language" />
    <fragment
        android:id="@+id/privacyFragment"
        android:name="com.nutricatch.dev.PrivacyFragment"
        android:label="fragment_privacy"
        tools:layout="@layout/fragment_privacy" />
</navigation>