<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="24dp"
    tools:context=".views.navigation.recipes.RecipesFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_text_my_eating"
            style="@style/Theme.NutriCatch.TextStyle.Headline.Medium.Bold"
            android:layout_marginTop="64dp"
            android:text="@string/track_your_calories"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_recipes_head"
            style="@style/Theme.NutriCatch.TextStyle.Headline.Medium.Bold"
            android:layout_marginTop="24dp"
            android:text="@string/my_eating_history"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_text_my_eating"
            tools:ignoreViewBinding="true" />

    <!-- TODO : Tambahkan customview untuk total kalori -->

        <ImageView
            android:id="@+id/img_calendar"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:contentDescription="@string/date_picker"
            android:src="@drawable/ic_calendar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_text_my_eating"
            app:tint="?attr/colorControlNormal" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_today_calories_eating"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_recipes_head"
            tools:listitem="@layout/history_item" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>